--- a/src/index.css
+++ b/src/index.css
@@ -224,10 +224,11 @@ canvas.game-canvas {
 }
 
 .version-text {
-  position: absolute;
+  position: fixed;
   bottom: 1rem;
   right: 1rem;
   font-family: monospace;
   color: #888;
   font-size: 0.8rem;
+  z-index: 20;
 }
